@@ -13,10 +13,13 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  2.8.x - DD/MMM/2007
 ------------------------------------------------------------------------------
 
- - Updated translations (be, ca, cs, el, hu, sv, uk).
+ - Updated translations (be, ca, cs, el, hu, sv, uk, zh_CN).
  - Fixed the "Save As" function saving to the wrong folder in the URL Grabber.
  - Fixed a bug in the "Copy Selected Link" URL right-click on non-ASCII chars.
  - Fixed small bug: #100239 buffer overflow in setup dialog.
+ - Overhauled the Alerts section of the settings and added support for opening
+   system-tray balloons (libnotify required).
+ - Implemented /TRAY -b command on unix.
  - 
  - 
  - Plugin API:
